--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-        href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=La+Belle+Aurore&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@300&family=Shadows+Into+Light&family=La+Belle+Aurore&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet" type='text/css'>
     <script src="https://kit.fontawesome.com/63d27e9119.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -71,61 +71,61 @@
     <div class="animatedContainer">
         <div class="rotatingContent1 first">
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Alexander &nbsp; Marios &nbsp; Papas.</h3>
+                <h3 class="animatedText">Innovative Solutions for Modern Problems</h3>
                 <div class="icon"></div>
             </div>
         </div>
         <div class="rotatingContent2 second">
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
             <div class="rotator">
-                <h3 class="animatedText">Web Developer & Designer</h3>
+                <h3 class="animatedText">Exceeding Expectations, Every Time</h3>
                 <div class="icon"></div>
             </div>
         </div>
@@ -267,7 +267,85 @@
                             business and user needs. Additionally, I am disciplined, able to work independently, manage
                             my time effectively, and meet deadlines without compromising on quality.</p>
                     </div>
-                    <div class="skill-bars"></div>
+                    <div class="container">
+
+                        <div class="container__progressbars">
+
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-html shadow-html"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-html">HTML</span>
+                            </div>
+
+
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-css shadow-css"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-css">JavaScript</span>
+                            </div>
+
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-scss shadow-scss"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-scss">Express</span>
+                            </div>
+                        </div>
+                        <div class="container__progressbars">
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-js shadow-js">
+                                    </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-js">CSS</span>
+                            </div>
+
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-ts shadow-ts">
+                                    </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-ts">JQuery</span>
+                            </div>
+
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-node shadow-node"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-node">PS</span>
+                            </div>
+                        </div>
+                        <div class="container__progressbars">
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-react shadow-react"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-react">Bootstrap</span>
+                            </div>
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-angular shadow-angular"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-angular">Node.js</span>
+                            </div>
+                            <div class="progressbar">
+                                <svg class="progressbar__svg">
+                                    <circle cx="80" cy="80" r="70"
+                                        class="progressbar__svg-circle circle-vue shadow-vue"> </circle>
+                                </svg>
+                                <span class="progressbar__text shadow-vue">Figma</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </section>
                 <!-- ---SECTION SKILLS--- -->
 
