--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <canvas id="canvas"></canvas>
+    
 
     <!-- ---MAIN MENU--- -->
     <div class="main-menu" id="main-menu">
@@ -149,7 +149,7 @@
 
                 <!-- ---SECTION HOME--- -->
                 <section id="section-home" class="section-home page-home">
-
+                    <canvas id="canvas"></canvas>
                     <div class="text-zone" id="textZone">
                         <h1 class="main-title" id="main-title">
                             <span class="title alpha">H</span><span class="title alpha2">i</span><span
@@ -283,7 +283,7 @@
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-css shadow-css"> </circle>
+                                        class="progressbar__svg-circle circle-js shadow-js"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-css">JavaScript</span>
                             </div>
@@ -291,7 +291,7 @@
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-scss shadow-scss"> </circle>
+                                        class="progressbar__svg-circle circle-express shadow-express"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-scss">Express</span>
                             </div>
@@ -299,7 +299,7 @@
                         <div class="container__progressbars">
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
-                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-js shadow-js">
+                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-css shadow-css">
                                     </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-js">CSS</span>
@@ -307,7 +307,7 @@
 
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
-                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-ts shadow-ts">
+                                    <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-jquery shadow-jquery">
                                     </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-ts">JQuery</span>
@@ -316,7 +316,7 @@
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-node shadow-node"> </circle>
+                                        class="progressbar__svg-circle circle-ps shadow-ps"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-node">PS</span>
                             </div>
@@ -325,21 +325,21 @@
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-react shadow-react"> </circle>
+                                        class="progressbar__svg-circle circle-bootstrap shadow-bootstrap"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-react">Bootstrap</span>
                             </div>
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-angular shadow-angular"> </circle>
+                                        class="progressbar__svg-circle circle-node shadow-node"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-angular">Node.js</span>
                             </div>
                             <div class="progressbar">
                                 <svg class="progressbar__svg">
                                     <circle cx="80" cy="80" r="70"
-                                        class="progressbar__svg-circle circle-vue shadow-vue"> </circle>
+                                        class="progressbar__svg-circle circle-figma shadow-figma"> </circle>
                                 </svg>
                                 <span class="progressbar__text shadow-vue">Figma</span>
                             </div>
