--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                             solver, able to identify and analyze issues, and devise effective solutions that meet
                             business and user needs. Additionally, I am disciplined, able to work independently, manage
                             my time effectively and meet deadlines without quality being compromised.</p>
+                            
                     </div>
                     <div class="container" id="container">
 
@@ -371,7 +372,7 @@
                             Direct&nbsp;"</a>
                     </div>
 
-                    <div id="container-iframe2" class="container-lg">
+                    <!-- <div id="container-iframe2" class="container-lg">
                         <div id="inner-iframe2">
                             <iframe src="https://ill-blue-starfish-robe.cyclic.app" frameborder="0"></iframe>
                         </div>
@@ -384,7 +385,7 @@
                             <iframe src="https://mmfs.io" frameborder="0"></iframe>
                         </div>
                         <a href="https://mmfs.io" target="iframe1">"&nbsp;Click for Direct&nbsp;"</a>
-                    </div>
+                    </div> -->
 
                 </section>
                 <!-- ---SECTION PORTFOLIO--- -->
